--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app>
 <head>
   <title>dal Segno</title>
   <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.3.0/pure-min.css">
@@ -11,7 +11,7 @@
   <div class='pure-g-r'>
     <div class='pure-u-1-5'>
       <div class="pure-menu pure-menu-open">
-        <a class="pure-menu-heading topLeftIcon">
+        <a href="/" class="pure-menu-heading topLeftIcon">
           <%= image_tag "Music-segno.png" %>
         </a>
         <ul>
