work on authentication, plus added a bunch of user fields. also added elusive-icons gem

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,9 @@
  *= require_tree .
  */
 
+@import 'elusive-webfont';
+@import 'elusive-webfont-ie7';
+
 footer {
   text-align: center;
   font-size: 8px;
