--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,13 +1,20 @@
 .pure-g-r
   .pure-u-3-5.card
-    %p Welcome to dal Segno. Please provide the info below to sign up.
-    =form_for User.new, html:{class:"pure-form pure-form-stacked"} do |u|
-      %p
-      =u.label "email", :email
-      =u.text_field :email, placeholder:"me@mydomian.com"
-      %p
-      =u.label "password", :password
-      =u.text_field :password, placeholder:"password"
+    %h3 Welcome to dal Segno. 
+    %p Please provide the info below to sign up.
+    =form_for User.new, html:{class:"pure-form"} do |u|
+      %fieldset{class:"pure-group"}
+        =u.text_field :email, {class: "pure-input-1-2", placeholder:"me@mydomian.com" }
+        =u.text_field :password, {class: "pure-input-1-2", placeholder:"password", type: "password", required:true}
+      %fieldset{class:"pure-group"}
+        =u.text_field :name, {class:"pure-input-1-2", placeholder:"Your Name"}
+        =u.text_field :address, {class:"pure-input-1-2", placeholder:"123 Main St."}
+        =u.text_field :city, {class:"pure-input-1-2", placeholder:"City"}
+        =u.text_field :state, {class:"pure-input-1-2", placeholder:"State"}
+        =u.text_field :zip, {class:"pure-input-1-2", placeholder:"Zip Code"}
+        =u.text_field :phone, {class:"pure-input-1-2", placeholder:"Phone"}
+
+
+
       =submit_tag "Create User", class:"pure-button"
-    %p User Id:
-    = session[:user_id]
+
