add passenger server + prep for heroku deploy

--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -13,8 +13,6 @@
         =u.text_field :state, {class:"pure-input-1-2", placeholder:"State"}
         =u.text_field :zip, {class:"pure-input-1-2", placeholder:"Zip Code"}
         =u.text_field :phone, {class:"pure-input-1-2", placeholder:"Phone"}
-
-
-
       =submit_tag "Create User", class:"pure-button"
+    = notice
 
