--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,23 +11,24 @@
 </head>
 <body>
   <div class='pure-g-r'>
+    <%if signed_in? %>
     <div class='pure-u-1-5'>
       <div class="pure-menu pure-menu-open">
         <a href="/" class="pure-menu-heading topLeftIcon">
           <%= image_tag "Music-segno.png" %>
         </a>
+        
         <ul>
           <li class="pure-menu-heading">
             
             <% if current_user %>
               Logged in as<br />
                <%= current_user.email %>
+               <%= link_to "Profile", user_path(current_user) %>
                <% else %>
                Not Logged In.
                <%end%>
                <br />
-            <!-- <button class="pure-button">Logout</button> -->
-            <%# button_to ("Logout", controller:"authentications", action:"destroy")%>
             <%= link_to  "Logout", logout_path , class:"pure-button"%>
           </li>
           <li><%= link_to '<i class="icon-envelope"></i> Messages'.html_safe, messages_path %></li>
@@ -36,7 +37,11 @@
         </ul>
       </div>
     </div>
+    <% else %>
+    <div class='pure-u-1-5'></div>
+    <%end%>
 
+      
     <div class='pure-u-4-5'>
       <div class='placeholder'></div>
       <div class='container'>
