Replace elusive icons with ionic icons. convert the users field to a partial for use editing profiles.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,8 +12,8 @@
  *= require_tree .
  */
 
-@import 'elusive-webfont';
-@import 'elusive-webfont-ie7';
+/*@import 'elusive-webfont';
+@import 'elusive-webfont-ie7';*/
 
 footer {
   text-align: center;
