--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
                <br />
             <%= link_to  "Logout", logout_path , class:"pure-button"%>
           </li>
-          <li><%= link_to '<i class="icon-envelope"></i> Messages'.html_safe, messages_path %></li>
+          <li><%= link_to '<i class="icon-email"></i> Messages'.html_safe, messages_path %></li>
           <li><a href="#">thing 2</a></li>
           <li><a href="#">thing 3</a></li>
         </ul>
