--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -13,3 +13,4 @@
         =@user.phone
       .pure-u-1-2
         = image_tag @user.gravatar_url
+        =link_to "edit", edit_user_path , class: "pure-button"
