--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
             <%= link_to  "Logout", logout_path , class:"pure-button"%>
           </li>
           <li><%= link_to '<i class="icon-email"></i> Messages'.html_safe, messages_path %></li>
-          <li><a href="#">thing 2</a></li>
+          <li><%= link_to '<i class="icon-ios7-people"></i> Users'.html_safe, users_path %></li>
           <li><a href="#">thing 3</a></li>
         </ul>
       </div>
