--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -9,4 +9,5 @@
     =u.text_field :state, {class:"pure-input-1-2", placeholder:"State"}
     =u.text_field :zip, {class:"pure-input-1-2", placeholder:"Zip Code"}
     =u.text_field :phone, {class:"pure-input-1-2", placeholder:"Phone"}
-  =u.submit "Submit", {class: "pure-button"}
+  =#u.submit "Submit", {class: "pure-button"}
+  =u.submit
