--- a/app/views/users/_form.html.haml
+++ b/app/views/users/_form.html.haml
@@ -1,4 +1,4 @@
-=form_for User.new, html:{class:"pure-form"} do |u|
+=form_for @user, html:{class:"pure-form"} do |u|
   %fieldset{class:"pure-group"}
     =u.text_field :email, {class: "pure-input-1-2", placeholder:"me@mydomian.com" }
     =u.text_field :password, {class: "pure-input-1-2", placeholder:"password", type: "password", required:true}
@@ -9,5 +9,4 @@
     =u.text_field :state, {class:"pure-input-1-2", placeholder:"State"}
     =u.text_field :zip, {class:"pure-input-1-2", placeholder:"Zip Code"}
     =u.text_field :phone, {class:"pure-input-1-2", placeholder:"Phone"}
-  =#u.submit "Submit", {class: "pure-button"}
-  =u.submit
+  =u.submit nil, {class: "pure-button"}
