--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,3 +1,35 @@
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-r1YQPElxrGtWhUsfpi8lI18NUkMss1w&sensor=false"></script>
+
+:javascript
+  function initialize() {
+    
+    var mapOptions = {
+      center: new google.maps.LatLng(-34.397, -115.644),
+      zoom: 8,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    };
+    var map = new google.maps.Map(document.getElementById("map-canvas"),
+        mapOptions);
+
+  function codeAddress() {
+    var address = document.getElementById('address').value;
+    geocoder.geocode( { 'address': address}, function(results, status) {
+      if (status == google.maps.GeocoderStatus.OK) {
+        map.setCenter(results[0].geometry.location);
+        var marker = new google.maps.Marker({
+            map: map,
+            position: results[0].geometry.location
+        });
+      } else {
+        alert('Geocode was not successful for the following reason: ' + status);
+      }
+    });
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
+  }
+
+
+
 .pure-g-r
   .pure-u-1.card
     = image_tag @user.gravatar_url, class: "profileImg"
@@ -19,5 +51,7 @@
           =@user.address
           %br
           =@user.city + ", " + @user.state + " " + @user.zip
+        #map-canvas
+
 
         
