--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,5 @@
 .pure-g-r
   - @users.each do |u|
     .pure-u-2-5.card
-      = u.name
+      = link_to u.name, user_path(u.id)
       = image_tag u.gravatar_url, class: "profileImg"
