--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,21 +1,15 @@
-<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB-r1YQPElxrGtWhUsfpi8lI18NUkMss1w&sensor=false"></script>
-
 :javascript
+  var geocoder;
+  var map;
   function initialize() {
-    
-    var mapOptions = {
-      center: new google.maps.LatLng(-34.397, -115.644),
-      zoom: 8,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    };
-    var map = new google.maps.Map(document.getElementById("map-canvas"),
-        mapOptions);
-
-  function codeAddress() {
-    var address = document.getElementById('address').value;
+    geocoder = new google.maps.Geocoder();
+    //var latlng = new google.maps.LatLng(-34.397, 150.644);
+    var latlon;
+    var address = document.getElementById('address').innerHTML;
     geocoder.geocode( { 'address': address}, function(results, status) {
       if (status == google.maps.GeocoderStatus.OK) {
-        map.setCenter(results[0].geometry.location);
+        latlon = results[0].geometry.location;
+        map.setCenter(latlon);
         var marker = new google.maps.Marker({
             map: map,
             position: results[0].geometry.location
@@ -24,9 +18,16 @@
         alert('Geocode was not successful for the following reason: ' + status);
       }
     });
+    var mapOptions = {
+      zoom: 12,
+      center: latlon,
+      mapTypeId: google.maps.MapTypeId.ROADMAP
+    }
+    map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
   }
+
+
   google.maps.event.addDomListener(window, 'load', initialize);
-  }
 
 
 
@@ -34,6 +35,7 @@
   .pure-u-1.card
     = image_tag @user.gravatar_url, class: "profileImg"
     %h2=@user.name
+
     .pure-g-r
       .pure-u-1
         %h4 Contact Info
@@ -45,12 +47,11 @@
         =@user.phone
         %br
         =link_to "edit", edit_user_path , class: "pure-button editButton"
+        =notice
       .pure-u-1-2
         %i{class:"icon-location"}
-        .address
-          =@user.address
-          %br
-          =@user.city + ", " + @user.state + " " + @user.zip
+        #address
+          =@user.address + ", " + @user.city + ", " + @user.state + " " + @user.zip
         #map-canvas
 
 
