add wysiwyg message editor

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,6 +12,7 @@
  *= require_tree .
  */
 
+
 /*Import CodyStar + Open Sans from Google Fonts*/
 @import url(http://fonts.googleapis.com/css?family=Codystar|Open+Sans);
 
@@ -70,4 +71,13 @@ body {
 .topLeftIcon img{
   width: 50%;
   margin: 0 25%;
+}
+
+#wysihtml5-toolbar{
+  /*display: none;*/
+}
+
+#wysihtml5-textarea {
+  width: 70%;
+  height: 300px;
 }
