--- a/app/assets/stylesheets/pure-skin-ds.css
+++ b/app/assets/stylesheets/pure-skin-ds.css
@@ -20,6 +20,8 @@ body {
     user-select: none;
 }
 
+
+
 /* Firefox: Get rid of the inner focus border */
 .pure-button::-moz-focus-inner{
     padding: 0;
@@ -955,3 +957,6 @@ margin: 7px 2px;
 }
 /* end from menu-responsive.css ******************/
 
+.pure-button-small {
+    font-size: 75% !important;
+}
