--- a/app/views/messages/index.html.haml
+++ b/app/views/messages/index.html.haml
@@ -1,4 +1,4 @@
-.pure-g-r.messagesContainer
+.pure-g-r.messagesContainer{"ng-app" => true}
   .pure-u-1-5
     .pure-menu.pure-menu-open.topics
       %a{href:"messages/new", class:"pure-button"} New Message
