--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -1,5 +1,7 @@
 .pure-g-r
   - @users.each do |u|
     .pure-u-2-5.card
-      = link_to u.name, user_path(u.id)
-      = image_tag u.gravatar_url, class: "profileImg"
+      = link_to (image_tag u.gravatar_url, class: "profileImg"), user_path(u.id)
+      %h3= u.name
+      =u.phone
+      
