--- a/app/assets/stylesheets/messages.css
+++ b/app/assets/stylesheets/messages.css
@@ -7,6 +7,7 @@
   background: white;
   margin: 0 auto 5px;
   box-shadow: 0 2px 3px #999;
+  position: relative;
 }
 .message {
   margin-left: 10px;
