--- a/app/assets/stylesheets/font-awesome.scss
+++ b/app/assets/stylesheets/font-awesome.scss
@@ -27,8 +27,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: font-url('fontawesome-webfont.eot?v=4.0.1');
-  src: font-url('fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'), font-url('fontawesome-webfont.woff?v=4.0.1') format('woff'), font-url('fontawesome-webfont.ttf?v=4.0.1') format('truetype'), font-url('fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');
+  src: font-url('/assets/fontawesome-webfont.eot?v=4.0.1');
+  src: font-url('/assets/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'), font-url('/assets/fontawesome-webfont.woff?v=4.0.1') format('woff'), font-url('/assets/fontawesome-webfont.ttf?v=4.0.1') format('truetype'), font-url('/assets/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
