--- a/app/assets/stylesheets/ionicons.scss
+++ b/app/assets/stylesheets/ionicons.scss
@@ -1,10 +1,10 @@
 @font-face {
 	font-family: 'ionicons';
-	src:font-url('ionicons.eot');
-	src:font-url('ionicons.eot?#iefix') format('embedded-opentype'),
-		font-url('ionicons.woff') format('woff'),
-		font-url('ionicons.ttf') format('truetype'),
-		font-url('ionicons.svg#ionicons') format('svg');
+	src:font-url('/assets/ionicons.eot');
+	src:font-url('/assets/ionicons.eot?#iefix') format('embedded-opentype'),
+		font-url('/assets/ionicons.woff') format('woff'),
+		font-url('/assets/ionicons.ttf') format('truetype'),
+		font-url('/assets/ionicons.svg#ionicons') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
