--- a/app/assets/stylesheets/font-awesome.css.erb
+++ b/app/assets/stylesheets/font-awesome.css.erb
@@ -27,8 +27,8 @@
  * -------------------------- */
 @font-face {
   font-family: 'FontAwesome';
-  src: font-url('/assets/fontawesome-webfont.eot?v=4.0.1');
-  src: font-url('/assets/fontawesome-webfont.eot?#iefix&v=4.0.1') format('embedded-opentype'), font-url('/assets/fontawesome-webfont.woff?v=4.0.1') format('woff'), font-url('/assets/fontawesome-webfont.ttf?v=4.0.1') format('truetype'), font-url('/assets/fontawesome-webfont.svg?v=4.0.1#fontawesomeregular') format('svg');
+  src: url('<%= asset_path "fontawesome-webfont.eot" %>?v=4.0.1');
+  src: url('<%= asset_path "fontawesome-webfont.eot" %>?#iefix&v=4.0.1') format('embedded-opentype'), url('<%= asset_path "fontawesome-webfont.woff" %>?v=4.0.1') format('woff'), url('<%= asset_path "fontawesome-webfont.ttf" %>?v=4.0.1') format('truetype'), url('<%= asset_path "fontawesome-webfont.svg" %>?v=4.0.1#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
