--- a/app/views/messages/show.html.haml
+++ b/app/views/messages/show.html.haml
@@ -4,4 +4,5 @@
     %br
     =@message.message_body.html_safe
     %br
-    =link_to "delete", message_path(@message.id), {method:"delete", class:"pure-button"}
+    -if current_user.admin
+      =link_to "delete", message_path(@message.id), {method:"delete", class:"pure-button"}
