--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -57,9 +57,8 @@
       }
       map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
     }
-
-
-    google.maps.event.addDomListener(window, 'page:change', initialize);
+   
+    $(document).on('page:change', initialize);
 
 
         
